feat: new header added

--- a/meal/index.html
+++ b/meal/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Meal Application</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1 align="center" class="header">Welcome To Meal Application</h1>
+    <h1 align="center" class="header">ARSHAD PROJECT</h1>
     <h1 align="left" class="header">Today's Meal</h1>
-    <div id="container"> </div>
+    <div id="container"></div>
 
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
